--- a/html/produtos.html
+++ b/html/produtos.html
@@ -66,10 +66,10 @@
             <input type="search" class="searchBarInput">
                 <i class="fa-solid fa-magnifying-glass"></i>
         </div>  -->
-        <!-- BOTTOM MENU BAR -->
+        <!-- BOTTOM MENU BAR -->/
         <section class="bottom-menu">
             <div class="home">
-                <a href="\index.html">
+                <a href="/index.html">
                     <i class="fa-solid fa-house"></i>
                 </a>
             </div>
@@ -85,77 +85,77 @@
             </div>
 
             <div class="ervas-cha photo-div-product" >
-                <a href="html/ervasECha.html">
+                <a href="/html/ervasECha.html">
                     <img src="/images/cabaz-photo.jpeg" alt="">
                     <p>Ervas e Chá</p>
                 </a>
             </div>
 
             <div class="saladas photo-div-product">
-                <a href="html/saladas.html">
+                <a href="/html/saladas.html">
                     <img src="/images/cabaz-photo.jpeg" alt="">
                     <p>Saladas</p>
                 </a>
             </div>
 
             <div class="verduras-folhas photo-div-product">
-                <a href="html/verduras.html">
+                <a href="/html/verduras.html">
                     <img src="/images/cabaz-photo.jpeg" alt="">
                     <p>Verduras</p>
                 </a>
             </div>
 
             <div class="ovos-sabao photo-div-product">
-                <a href="html/ovos.html">
+                <a href="/html/ovos.html">
                     <img src="/images/cabaz-photo.jpeg" alt="">
                     <p>Ovos</p>
                 </a>
             </div>
 
             <div class="raizes photo-div-product">
-                <a href="html/raizes.html">
+                <a href="/html/raizes.html">
                     <img src="/images/cabaz-photo.jpeg" alt="">
                     <p>Raízes</p>
                 </a>
             </div>
 
             <div class="microverdes-germinados photo-div-product">
-                <a href="html/microverdes.html">
+                <a href="/html/microverdes.html">
                     <img src="/images/cabaz-photo.jpeg" alt="">
                 <p>Microverdes</p>
                 </a>
             </div>
 
             <div class="vasos-plantas photo-div-product">
-                <a href="html/plantasEmVaso.html">
+                <a href="/html/plantasEmVaso.html">
                     <img src="/images/cabaz-photo.jpeg" alt="">
                     <p>Plantas</p>
                 </a>
             </div>
 
             <div class="flores-comestiveis photo-div-product">
-                <a href="html/floresComestiveis.html">
+                <a href="/html/floresComestiveis.html">
                     <img src="/images/cabaz-photo.jpeg" alt="">
                     <p>Flores Comestiveis</p>
                 </a>
             </div>
 
             <div class="leguminosas photo-div-product">
-                <a href="html/leguminosas.html">
+                <a href="/html/leguminosas.html">
                     <img src="/images/cabaz-photo.jpeg" alt="">
                     <p>Leguminosas</p>
                 </a>
             </div>
 
             <div class="horticolas-frio photo-div-product">
-                <a href="html/horticulas.html">
+                <a href="/html/horticulas.html">
                     <img src="/images/cabaz-photo.jpeg" alt="">
                     <p>Horticolas</p>
                 </a>
             </div>
 
             <div class="sabao-Natural photo-div-product">
-                <a href="html/sabaoNatural.html">
+                <a href="/html/sabaoNatural.html">
                     <img src="/images/cabaz-photo.jpeg" alt="">
                     <p>Sabão Natural</p>
                 </a>
