update style of cabaz-um page onclick

--- a/html/cabaz-dois.html
+++ b/html/cabaz-dois.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="/stylesheet/styleAboutUs.css">
     <link rel="stylesheet" href="/stylesheet/cabaz.css">
     <link rel="stylesheet" href="/stylesheet/bottomMenu.css">
-    <link rel="stylesheet" href="/stylesheet/productsList.css">
+    <link rel="stylesheet" href="/stylesheet/produtos.css">
     <link rel="stylesheet" href="/stylesheet/contacts.css">
     <link rel="stylesheet" href="/stylesheet/footer.css">
     <link rel="stylesheet" href="/stylesheet/ervasECha.css">
@@ -76,6 +76,8 @@
         <div class="login"><i class="fa-solid fa-user"></i></div>
     </section>
 
+
+    <h2 style="margin-top: 15rem;">Cabaz 2</h2>
 
 </body>
 </html>
