--- a/html/cabaz-um.html
+++ b/html/cabaz-um.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="/stylesheet/styleAboutUs.css">
     <link rel="stylesheet" href="/stylesheet/cabaz.css">
     <link rel="stylesheet" href="/stylesheet/bottomMenu.css">
-    <link rel="stylesheet" href="/stylesheet/productsList.css">
+    <link rel="stylesheet" href="/stylesheet/produtos.css">
     <link rel="stylesheet" href="/stylesheet/contacts.css">
     <link rel="stylesheet" href="/stylesheet/footer.css">
     <link rel="stylesheet" href="/stylesheet/ervasECha.css">
@@ -79,44 +79,7 @@
     <!-- Watch cabaz-um.js -->
     <section class="cabaz-um">
 
-        <h2 class="cabaz-name-title">Cabaz nº 1</h2>
-
-        <div class="cabaz-content">
-            <!-- <h4>O Cabaz nº 1 é composto por:</h4> -->
-            <ul class="cabaz-list">
-                <li class="cabaz-item">Cenoura</li>
-                <li class="cabaz-item">Mini-Acelgas</li>
-                <li class="cabaz-item">Salada-Mix</li>
-                <li class="cabaz-item">Tangerinas</li>
-                <li class="cabaz-item">Microverdes</li>
-            </ul>
-            <img src="/images/cabaz-photo.jpeg" alt="">
-            <button type="button" class="add-to-cart">Adicionar ao Carrinho</button>
-        </div>
-
-        <div class="sugestions">
-            <h4 class="sugestionsTitle">Outras Sugestões:</h4>
-            <div class="sugestionsContent">
-                <div class="sugestionOne sugestion">
-                    <a href="/html/cabaz-dois.html">
-                        <img src="/images/cabaz-photo.jpeg" alt="">
-                        <span>Cabaz nº 1</span>
-                    </a>
-                </div>
-                <div class="sugestionTwo sugestion">
-                    <a href="/html/cabaz-tres.html">
-                        <img src="/images/cabaz-photo.jpeg" alt="">
-                        <span>Cabaz nº 2</span>
-                    </a>
-                </div>
-                <div class="sugestionThree sugestion">
-                    <a href="/html/criar-cabaz.html">
-                        <img src="/images/cabaz-photo.jpeg" alt="">
-                        <span>Criar Cabaz</span>
-                    </a>
-                </div>
-            </div>
-        </div>
+        
 
     </section>
 
