fix some href on "footer"

--- a/html/informations.html
+++ b/html/informations.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="/stylesheet/styleAboutUs.css">
     <link rel="stylesheet" href="/stylesheet/cabaz.css">
     <link rel="stylesheet" href="/stylesheet/bottomMenu.css">
-    <link rel="stylesheet" href="/stylesheet/productsList.css">
+    <link rel="stylesheet" href="/stylesheet/produtos.css">
     <link rel="stylesheet" href="/stylesheet/contacts.css">
     <link rel="stylesheet" href="/stylesheet/footer.css">
     <link rel="stylesheet" href="/stylesheet/ervasECha.css">
@@ -49,7 +49,6 @@
         <ul class="menu-list">
             <!-- href.value = element.id.value -->
             <a href="/html/aboutUs.html"> <li>Quem Somos  </li>  </a>
-            <a href="#cabazesMenu"> <li>Criar Cabaz</li></a>
             <a href="/html/produtos.html"> <li>Produtos</li></a>
             <a href="/html/form.html"> <li>Contactos</li></a>
             <a href="#"> <li>Testemunhos</li></a>
@@ -120,13 +119,12 @@
         </div>
 
         <div class="footer-end">
-            <p>Inicio</p>
-            <p>Cabazes</p>
-            <p>Produtos</p>
-            <p>Morada</p>
-            <p>Sobre Nós</p>
+            <a href="/index.html"><p>Cabazes</p></a>
+            <a href="/html/produtos.html"><p>Produtos</p></a>
+            <a href="https://maps.app.goo.gl/wQxxDfTWipkPG5c36" target="_blank"><p>Morada</p></a>
+            <a href="/html/aboutUs.html"><p>Sobre Nós</p></a>
+            <a href="#"><p>Voltar ao topo</p></a>
         </div>
-
        
         <div class="webDevSp">
             <a href="mailto:simaaoweb@gmail.com">
