add some details
add telephone number to footer;
add google maps section to form.html;

--- a/html/aboutUs.html
+++ b/html/aboutUs.html
@@ -96,11 +96,19 @@
                     <img src="\images/farmView.jpeg" alt="">
                 </div>
                 <div class="about-us-description">
+                    <h3>A nossa história</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum laboriosam expedita beatae at eos odio iusto tenetur iste sed aperiam.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A autem assumenda similique ex. Sed, dignissimos?</p>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas quos nihil voluptas.</p>
+                </div>
+                    <div class="about-us-description">
+                    <h3>Quem somos nós?</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum laboriosam expedita beatae at eos odio iusto tenetur iste sed aperiam.</p>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A autem assumenda similique ex. Sed, dignissimos?</p>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas quos nihil voluptas.</p>
                 </div>
                 <div class="about-us-description">
+                    <h3>A nossa missão e visão</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum laboriosam expedita beatae at eos odio iusto tenetur iste sed aperiam.</p>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A autem assumenda similique ex. Sed, dignissimos?</p>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas quos nihil voluptas.</p>
@@ -137,7 +145,10 @@
     
             <div class="contact social-media">
                 <a href="callto:00351914547465"><i class="fa-solid fa-phone"></i></a>
-                <span class="call-cost">Custo chamada nacional</span>
+                <div class="info-tel">
+                    <span class="call-cost">+351 914 547 465</span>
+                    <span class="call-cost">Custo chamada nacional</span>
+                </div>
             </div>
     
             <div class="location social-media">
