--- a/html/success.html
+++ b/html/success.html
@@ -112,7 +112,10 @@
 
         <div class="contact social-media">
             <a href="callto:00351914547465"><i class="fa-solid fa-phone"></i></a>
-            <span class="call-cost">Custo chamada nacional</span>
+            <div class="info-tel">
+                <span class="call-cost">+351 914 547 465</span>
+                <span class="call-cost">Custo chamada nacional</span>
+            </div>
         </div>
 
         <div class="location social-media">
