add href to each page to carrinho.html

--- a/html/form.html
+++ b/html/form.html
@@ -42,7 +42,9 @@
             <div class="cart-and-menu">
 
                 <div class="cart-div">
-                    <i class="fa-solid fa-cart-shopping"></i>
+                    <a href="/html/carrinho.html">
+                        <i class="fa-solid fa-cart-shopping"></i>
+                    </a>
                     <span class="article-number">0</span>
                 </div>
 
