--- a/html/cabaz-tres.html
+++ b/html/cabaz-tres.html
@@ -36,8 +36,9 @@
             
             <div class="cart-and-menu">
 
-                <div class="cart-div">
+                <div<a href="/html/carrinho.html">
                     <i class="fa-solid fa-cart-shopping"></i>
+                </a>
                     <span class="article-number">0</span>
                 </div>
 
