update style to laptops

--- a/html/cabaz-tres.html
+++ b/html/cabaz-tres.html
@@ -36,9 +36,10 @@
             
             <div class="cart-and-menu">
 
-                <div<a href="/html/carrinho.html">
-                    <i class="fa-solid fa-cart-shopping"></i>
-                </a>
+                <div class="cart-div">
+                    <a href="/html/carrinho.html">
+                        <i class="fa-solid fa-cart-shopping"></i>
+                    </a>
                     <span class="article-number">0</span>
                 </div>
 
@@ -46,6 +47,7 @@
                 <!-- <i class="fa-solid fa-x"></i>  fa-bars-staggered  -->
             </div>
         </nav>
+        
 
         <ul class="menu-list">
             <!-- href.value = element.id.value -->
