--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <section class="cabazes" id="cabazesMenu">
 
             <div class="title-div">
-                <h1>Os nossos <span class="hortaDaRia">Cabazes</span></h1>
+                <h1><span class="hortaDaRia">Cabazes</span> da semana</h1>
             </div>
 
             <div class="cabaz-menu">
@@ -117,6 +117,7 @@
             </div>
 
         </section>
+        
         <section class="media-and-contacts" id="contactsAndSocialMedia">
 
             <div class="footer-head">
