added style to laptop and some text to About Us page

--- a/html/produtos.html
+++ b/html/produtos.html
@@ -79,6 +79,8 @@
             <div class="login"><i class="fa-solid fa-user"></i></div>
         </section>
 
+        <!--  LIST OF ALL ITEMS TO SELL -->
+
         <section class="all-products" id="productsList">
 
             <div class="title-div">
