--- a/html/aboutUs.html
+++ b/html/aboutUs.html
@@ -97,24 +97,31 @@
                 <div class="about-us-photo">
                     <img src="\images/farmView.jpeg" alt="">
                 </div>
+
                 <div class="about-us-description">
-                    <h3>A nossa história</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum laboriosam expedita beatae at eos odio iusto tenetur iste sed aperiam.</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A autem assumenda similique ex. Sed, dignissimos?</p>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas quos nihil voluptas.</p>
-                </div>
-                    <div class="about-us-description">
                     <h3>Quem somos nós?</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum laboriosam expedita beatae at eos odio iusto tenetur iste sed aperiam.</p>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A autem assumenda similique ex. Sed, dignissimos?</p>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas quos nihil voluptas.</p>
                 </div>
+
+                <div class="about-us-description">
+                    <h3>A nossa história</h3>
+                    <p> A Horta d'Ria é um projeto nascido em memória da avó de Tiago, a D.Maria, que todos conhecem por Ria.</p>
+                    <p> Situada num cenário pitoresco, a nossa quinta é dedicada exclusivamente à produção de produtos biológicos. Comprometidos em fornecer aos nossos clientes os melhores produtos, privilegiamos o mercado local.</p>
+                    <p> Aqui, cada colheita é cuidadosamente cultivada com amor e respeito pela natureza. Junte-se a nós numa jornada de sabores autênticos e sustentáveis.</p>
+                </div>
+                    
                 <div class="about-us-description">
                     <h3>A nossa missão e visão</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum laboriosam expedita beatae at eos odio iusto tenetur iste sed aperiam.</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A autem assumenda similique ex. Sed, dignissimos?</p>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas quos nihil voluptas.</p>
+                    <p>Sonhamos com um futuro entrelaçado com os ritmos da natureza, sustentabilidade e uma visão transcende simples práticas agrícolas. Inspirados pela beleza da nossa horta, vemos que prospera sob os princípios da sustentabilidade e agricultura biodinâmica.</p>
+                    <p>Imaginamos um mundo onde a Horta d´Ria sirva como um farol de esperança, de forma a exibir as dádivas da natureza nutridas através de métodos orgânicos, cujo compromisso com o cultivo de produtos biológicos decorre de uma crença profunda na importância de preservar o planeta para as gerações futuras. Compreendemos que a saúde da terra é inseparável do bem-estar de todos os seres vivos que a habitam.</p>
+                    <p>A Horta d´Ria é um testemunho da inovação e tradição, onde tecnologias modernas são aproveitadas para melhorar a sustentabilidade sem comprometer o equilíbrio natural do ecossistema. Queremos criar um ambiente auto-sustentável onde o solo é enriquecido, a biodiversidade floresce, e cada planta e animal são respeitados como parte vital da teia interligada da vida.</p>
+                    <p>Com uma paixão partilhada pelo cuidado do ambiente e um profundo respeito pela Terra, enquanto jovens agricultores vemos o nosso futuro como uma missão - uma oportunidade para ter um impacto positivo no mundo que nos rodeia. Acreditamos num futuro onde os produtos biológicos não sejam apenas uma escolha, mas um modo de vida, onde a sustentabilidade não seja uma tendência, mas um princípio fundamental que guia cada decisão que tomamos.</p>
+                    <p>Enquanto contemplamos a Horta d´Ria que guarda a promessa do amanhã, vemos mais do que plantações e animais. Vemos um legado de sustentabilidade e um testemunho do nosso compromisso inabalável em criar um mundo melhor e mais verde.</p>
+                    <p>Esta visão não é apenas um sonho, é um plano para um futuro onde a terra, os seus recursos e os seus habitantes são acarinhados e protegidos para as gerações vindouras.</p>
                 </div>
+                
             </div>
 
         </section>
