change json and html number on footer
i've change the json doc because the index of vasos inside microverdes doesn't work for my code. so i added to plantas em vaso, because it is all the same.

i also change, on plantasEmVaso. js the select element to from gr to un

--- a/html/plantasEmVaso.html
+++ b/html/plantasEmVaso.html
@@ -51,6 +51,7 @@
         <ul class="menu-list">
             <!-- href.value = element.id.value -->
             <a href="/html/aboutUs.html"> <li>Quem Somos  </li>  </a>
+            <a href="/index.html"> <li>Cabazes</li></a>
             <a href="/html/produtos.html"> <li>Produtos</li></a>
             <a href="/html/form.html"> <li>Contactos</li></a>
             <a href="#"> <li>Testemunhos</li></a>
@@ -78,7 +79,7 @@
     </section>
 
     <!-- watch js document -->
-    <section class="plantasEmVaso"></section>
+    <section class="plantasEmVaso toto"></section>
 
     <section class="media-and-contacts" id="contactsAndSocialMedia">
 
@@ -109,7 +110,7 @@
         <div class="contact social-media">
             <a href="callto:00351914547465"><i class="fa-solid fa-phone"></i></a>
             <div class="info-tel">
-                <span class="call-cost">+351 914 547 465</span>
+                <span class="call-cost">914 547 465</span>
                 <span class="call-cost">Custo chamada nacional</span>
             </div>
         </div>
