--- a/html/aboutUs.html
+++ b/html/aboutUs.html
@@ -54,6 +54,7 @@
         <ul class="menu-list">
             <!-- href.value = element.id.value -->
         <a href="/html/aboutUs.html"> <li>Quem Somos  </li>  </a>
+        <a href="/index.html"> <li>Cabazes</li></a>
         <a href="/html/produtos.html"> <li>Produtos</li></a>
         <a href="/html/form.html"> <li>Contactos</li></a>
         <a href="#"> <li>Testemunhos</li></a>
@@ -121,7 +122,7 @@
                     <p>Enquanto contemplamos a Horta d´Ria que guarda a promessa do amanhã, vemos mais do que plantações e animais. Vemos um legado de sustentabilidade e um testemunho do nosso compromisso inabalável em criar um mundo melhor e mais verde.</p>
                     <p>Esta visão não é apenas um sonho, é um plano para um futuro onde a terra, os seus recursos e os seus habitantes são acarinhados e protegidos para as gerações vindouras.</p>
                 </div>
-                
+
             </div>
 
         </section>
@@ -155,7 +156,7 @@
             <div class="contact social-media">
                 <a href="callto:00351914547465"><i class="fa-solid fa-phone"></i></a>
                 <div class="info-tel">
-                    <span class="call-cost">+351 914 547 465</span>
+                    <span class="call-cost">914 547 465</span>
                     <span class="call-cost">Custo chamada nacional</span>
                 </div>
             </div>
