--- a/html/informations.html
+++ b/html/informations.html
@@ -51,6 +51,7 @@
         <ul class="menu-list">
             <!-- href.value = element.id.value -->
             <a href="/html/aboutUs.html"> <li>Quem Somos  </li>  </a>
+            <a href="/index.html"> <li>Cabazes</li></a>
             <a href="/html/produtos.html"> <li>Produtos</li></a>
             <a href="/html/form.html"> <li>Contactos</li></a>
             <a href="#"> <li>Testemunhos</li></a>
@@ -106,7 +107,7 @@
         <div class="contact social-media">
             <a href="callto:00351914547465"><i class="fa-solid fa-phone"></i></a>
             <div class="info-tel">
-                <span class="call-cost">+351 914 547 465</span>
+                <span class="call-cost">914 547 465</span>
                 <span class="call-cost">Custo chamada nacional</span>
             </div>
         </div>
