--- a/html/produtos.html
+++ b/html/produtos.html
@@ -54,6 +54,7 @@
         <ul class="menu-list">
                 <!-- href.value = element.id.value -->
             <a href="/html/aboutUs.html"> <li>Quem Somos  </li>  </a>
+            <a href="/index.html"> <li>Cabazes</li></a>
             <a href="/html/produtos.html"> <li>Produtos</li></a>
             <a href="/html/form.html"> <li>Contactos</li></a>
             <a href="#"> <li>Testemunhos</li></a>
@@ -164,7 +165,10 @@
                 </a>
             </div>
 
+
         </section>
+
+        <section class="sugestions-section"></section>
 
         <section class="media-and-contacts" id="contactsAndSocialMedia">
 
@@ -195,7 +199,7 @@
             <div class="contact social-media">
                 <a href="callto:00351914547465"><i class="fa-solid fa-phone"></i></a>
                 <div class="info-tel">
-                    <span class="call-cost">+351 914 547 465</span>
+                    <span class="call-cost">914 547 465</span>
                     <span class="call-cost">Custo chamada nacional</span>
                 </div>
             </div>
