--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <ul class="menu-list">
                 <!-- href.value = element.id.value -->
             <a href="/html/aboutUs.html"> <li>Sobre Nós  </li>  </a>
-            <a href="#cabazesMenu"> <li>Criar Cabaz</li></a>
+            <a href="/index.html"> <li>Cabazes</li></a>
             <a href="/html/produtos.html"> <li>Produtos</li></a>
             <a href="/html/form.html"> <li>Contactos</li></a>
             <a href="#"> <li>Testemunhos</li></a>
@@ -117,7 +117,7 @@
             </div>
 
         </section>
-        
+
         <section class="media-and-contacts" id="contactsAndSocialMedia">
 
             <div class="footer-head">
