added section testimonials

--- a/html/aboutUs.html
+++ b/html/aboutUs.html
@@ -57,7 +57,7 @@
         <a href="/index.html"> <li>Cabazes</li></a>
         <a href="/html/produtos.html"> <li>Produtos</li></a>
         <a href="/html/form.html"> <li>Contactos</li></a>
-        <a href="#"> <li>Testemunhos</li></a>
+        <a href="/html/testemunhos.html"> <li>Testemunhos</li></a>
         <a href="#"> <li>Fotos</li></a>
         <a href="#Videos"><li>Videos</li></a>
     </ul>
@@ -108,9 +108,15 @@
 
                 <div class="about-us-description">
                     <h3>A nossa história</h3>
-                    <p> A Horta d'Ria é um projeto nascido em memória da avó de Tiago, a D.Maria, que todos conhecem por Ria.</p>
-                    <p> Situada num cenário pitoresco, a nossa quinta é dedicada exclusivamente à produção de produtos biológicos. Comprometidos em fornecer aos nossos clientes os melhores produtos, privilegiamos o mercado local.</p>
-                    <p> Aqui, cada colheita é cuidadosamente cultivada com amor e respeito pela natureza. Junte-se a nós numa jornada de sabores autênticos e sustentáveis.</p>
+                    <p> 
+                        A Horta d'Ria é um projeto nascido em memória da avó de Tiago, a D.Maria, que todos conhecem por Ria.
+                    </p>
+                    <p> Situada num cenário pitoresco, a nossa horta é dedicada exclusivamente à produção de produtos biológicos,
+                        com o compromisso de fornecer aos nossos clientes os melhores produtos.
+                    </p>
+                    <p> Aqui, cada colheita é cuidadosamente cultivada com amor e respeito pela natureza. 
+                        Junte-se a nós numa jornada de sabores autênticos e sustentáveis.
+                    </p>
                 </div>
                     
                 <div class="about-us-description">
