--- a/html/ovos.html
+++ b/html/ovos.html
@@ -54,7 +54,7 @@
             <a href="/index.html"> <li>Cabazes</li></a>
             <a href="/html/produtos.html"> <li>Produtos</li></a>
             <a href="/html/form.html"> <li>Contactos</li></a>
-            <a href="#"> <li>Testemunhos</li></a>
+            <a href="/html/testemunhos.html"> <li>Testemunhos</li></a>
             <a href="#"> <li>Fotos</li></a>
             <a href="#Videos"><li>Videos</li></a>
         </ul>
