added testimonial json data to work with the html file testimonial.html

--- a/html/testemunhos.html
+++ b/html/testemunhos.html
@@ -23,6 +23,8 @@
     <!-- font awesome  -->
     <script src="https://kit.fontawesome.com/ff1abd11bd.js" crossorigin="anonymous"></script> 
     <script src="\script.js" defer></script>
+    <script src="/scriptDocs/testimonials.js" defer></script>
+
     
 
     <title>Testemunhos - Horta d'Ria - Produtos 100% Naturais - Agricultura Local e Ecológica - V. N. Famalicão</title>
@@ -90,53 +92,9 @@
         </section>
 
         <!-- TESTEMUNHOS -->
+        <!-- WATCH testimonials.js -->
 
-
-        <section class="testimonials">
-
-            <div class="client-testimonial">
-                <h4 class="client-name">Tiago</h4>
-                <p class="testimonial-text">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                    Exercitationem, assumenda ab! Sequi inventore qui nulla numquam mollitia
-                    odit doloribus commodi harum! Harum alias veritatis ad sit deserunt cumque 
-                    impedit sequi.
-                </p>
-                <div class="date-and-job">
-                    <h6 class="testimonial-date">29/03/2024</h6>
-                    <h6 class="job-client">Web Developer</h6>
-                </div>
-            </div>
-
-            <div class="client-testimonial">
-                <h4 class="client-name">Tiago</h4>
-                <p class="testimonial-text">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                    Exercitationem, assumenda ab! Sequi inventore qui nulla numquam mollitia
-                    odit doloribus commodi harum! Harum alias veritatis ad sit deserunt cumque 
-                    impedit sequi.
-                </p>
-                <div class="date-and-job">
-                    <h6 class="testimonial-date">29/03/2024</h6>
-                    <h6 class="job-client">Web Developer</h6>
-                </div>
-            </div>
-
-            <div class="client-testimonial">
-                <h4 class="client-name">Tiago</h4>
-                <p class="testimonial-text">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                    Exercitationem, assumenda ab! Sequi inventore qui nulla numquam mollitia
-                    odit doloribus commodi harum! Harum alias veritatis ad sit deserunt cumque 
-                    impedit sequi.
-                </p>
-                <div class="date-and-job">
-                    <h6 class="testimonial-date">29/03/2024</h6>
-                    <h6 class="job-client">Web Developer</h6>
-                </div>
-            </div>
-
-        </section>
+        <section class="testimonials"></section>
 
 
         <section class="media-and-contacts" id="contactsAndSocialMedia">
