change biologic for natural designation of all products production

--- a/html/aboutUs.html
+++ b/html/aboutUs.html
@@ -111,7 +111,7 @@
                     <p> 
                         A Horta d'Ria é um projeto nascido em memória da avó de Tiago, a D.Maria, que todos conhecem por Ria.
                     </p>
-                    <p> Situada num cenário pitoresco, a nossa horta é dedicada exclusivamente à produção de produtos biológicos,
+                    <p> Situada num cenário pitoresco, a nossa horta é dedicada exclusivamente à produção de produtos naturais,
                         com o compromisso de fornecer aos nossos clientes os melhores produtos.
                     </p>
                     <p> Aqui, cada colheita é cuidadosamente cultivada com amor e respeito pela natureza. 
@@ -122,11 +122,11 @@
                 <div class="about-us-description">
                     <h3>A nossa missão e visão</h3>
                     <p>Sonhamos com um futuro entrelaçado com os ritmos da natureza, sustentabilidade e uma visão transcende simples práticas agrícolas. Inspirados pela beleza da nossa horta, vemos que prospera sob os princípios da sustentabilidade e agricultura biodinâmica.</p>
-                    <p>Imaginamos um mundo onde a Horta d´Ria sirva como um farol de esperança, de forma a exibir as dádivas da natureza nutridas através de métodos orgânicos, cujo compromisso com o cultivo de produtos biológicos decorre de uma crença profunda na importância de preservar o planeta para as gerações futuras. Compreendemos que a saúde da terra é inseparável do bem-estar de todos os seres vivos que a habitam.</p>
+                    <p>Imaginamos um mundo onde a Horta d´Ria sirva como um farol de esperança, de forma a exibir as dádivas da natureza nutridas através de métodos orgânicos, cujo compromisso com o cultivo de produtos naturais decorre de uma crença profunda na importância de preservar o planeta para as gerações futuras. Compreendemos que a saúde da terra é inseparável do bem-estar de todos os seres vivos que a habitam.</p>
                     <p>A Horta d´Ria é um testemunho da inovação e tradição, onde tecnologias modernas são aproveitadas para melhorar a sustentabilidade sem comprometer o equilíbrio natural do ecossistema. Queremos criar um ambiente auto-sustentável onde o solo é enriquecido, a biodiversidade floresce, e cada planta e animal são respeitados como parte vital da teia interligada da vida.</p>
-                    <p>Com uma paixão partilhada pelo cuidado do ambiente e um profundo respeito pela Terra, enquanto jovens agricultores vemos o nosso futuro como uma missão - uma oportunidade para ter um impacto positivo no mundo que nos rodeia. Acreditamos num futuro onde os produtos biológicos não sejam apenas uma escolha, mas um modo de vida, onde a sustentabilidade não seja uma tendência, mas um princípio fundamental que guia cada decisão que tomamos.</p>
+                    <p>Com uma paixão partilhada pelo cuidado do ambiente e um profundo respeito pela Terra, enquanto jovens agricultores vemos o nosso futuro como uma missão - uma oportunidade para ter um impacto positivo no mundo que nos rodeia. Acreditamos num futuro onde os produtos naturais não sejam apenas uma escolha, mas um modo de vida, onde a sustentabilidade não seja uma tendência, mas um princípio fundamental que guia cada decisão que tomamos.</p>
                     <p>Enquanto contemplamos a Horta d´Ria que guarda a promessa do amanhã, vemos mais do que plantações e animais. Vemos um legado de sustentabilidade e um testemunho do nosso compromisso inabalável em criar um mundo melhor e mais verde.</p>
-                    <p>Esta visão não é apenas um sonho, é um plano para um futuro onde a terra, os seus recursos e os seus habitantes são acarinhados e protegidos para as gerações vindouras.</p>
+                    <p>Esta visão não é apenas um sonho, é um plano para um futuro onde a terra, os seus recursos e os seus habitantes são acarinhados e protegidos para as gerações futuras.</p>
                 </div>
 
             </div>
@@ -138,7 +138,7 @@
             <div class="footer-head">
                 <img src="/images/logo.png" alt="" class="logo-img">
                 <h4>Horta d'Ria</h4>
-                <p>Produtos 100% Biológicos</p>
+                <p>Produtos 100% Naturais</p>
             </div>
                 
             <hr class="line-break">
