--- a/html/cabaz-tres.html
+++ b/html/cabaz-tres.html
@@ -20,7 +20,7 @@
     <script src="/script.js" defer></script>
 
 
-    <title>Cabaz nº 3 - Horta d'Ria - Produtos Biológicos - Vila Nova de Famalicão</title>
+    <title>Cabaz nº 3 - Horta d'Ria - Produtos 100% Naturais - Vila Nova de Famalicão</title>
 </head>
 <body>
     
@@ -88,7 +88,7 @@
         <div class="footer-head">
             <img src="/images/logo.png" alt="" class="logo-img">
             <h4>Horta d'Ria</h4>
-            <p>Produtos 100% Biológicos</p>
+            <p>Produtos 100% Naturais</p>
         </div>
             
         <hr class="line-break">
