--- a/html/carrinho.html
+++ b/html/carrinho.html
@@ -154,7 +154,7 @@
             <div class="footer-head">
                 <img src="/images/logo.png" alt="" class="logo-img">
                 <h4>Horta d'Ria</h4>
-                <p>Produtos 100% Biológicos</p>
+                <p>Produtos 100% Naturais</p>
             </div>
                 
             <hr class="line-break">
