--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="stylesheet/produtos.css">
     <link rel="stylesheet" href="stylesheet/contacts.css">
     <link rel="stylesheet" href="stylesheet/footer.css">
+    <link rel="stylesheet" href="/stylesheet/testemunhos.css">
 
 
 
@@ -20,6 +21,8 @@
     <!-- font awesome  -->
     <script src="https://kit.fontawesome.com/ff1abd11bd.js" crossorigin="anonymous"></script> 
     <script src="script.js" defer></script>
+    <script src="/scriptDocs/testimonials.js" defer></script>
+
     
 
     <title>Horta d'Ria - Home Page - Produtos 100% Naturais - Agricultura Local e Ecológica - V. N. Famalicão</title>
@@ -117,6 +120,11 @@
             </div>
 
         </section>
+
+        <!-- TESTIMONIAL -->
+        <h3 class="section-title">Testemunhos:</h3>
+        <section class="testimonials"></section>
+
 
         <section class="media-and-contacts" id="contactsAndSocialMedia">
 
