--- a/html/aboutUs.html
+++ b/html/aboutUs.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Simão Alves">
     <meta name="description" content="Produtos 100% Naturais - Horta da Ria - V. N. Famalicão">
-    <meta name="keywords" content="Agricultura, Terra, Horta, cidade, aldeia, produtos, frescos, fruta, legumes, vegetais, horticolas, ecologia, ecológica, natural, famalicão, famalicao, vnf, agricultor, agricultora">
+    <meta name="keywords" content="Agricultura, Terra, Horta, cidade, aldeia, produtos, frescos, fruta, legumes, vegetais, horticolas, ecologia, ecológica, natural, famalicão, famalicao, vnf, agricultor, cabaz, cabazes, produtos 100% naturais">
     <link rel="stylesheet" href="\stylesheet/navAndSearch.css">
     <link rel="stylesheet" href="/stylesheet/styleAboutUs.css">
     <link rel="stylesheet" href="/stylesheet/cabaz.css">
@@ -101,12 +101,29 @@
 
                 <div class="about-us-description">
                     <h3>Quem somos nós?</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum laboriosam expedita beatae at eos odio iusto tenetur iste sed aperiam.</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A autem assumenda similique ex. Sed, dignissimos?</p>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas quos nihil voluptas.</p>
+                    <p>Eu sou o Francisco tenho 34 anos e sou de Vila Nova de Famalicão. Tirei o curso técnico de informática no 12º ano e já há 15 anos que faço reparações numa empresa. 
+                        O gosto pela agricultura despultouse em março de 2021 quando começei a ajudar o Tiago aos fins de semana. Mais tarde, para dedicar mais tempo à horta, passei de full-time para part-time, 
+                        na empresa onde era técnico de informática.
+                        Com essa mudança consegui atingir o objectivo de produzir a minha propria comida, aumentar o contacto com a natureza e por sua vez um estilo de vida mais saudável.
+                    </p>
+                    <p>
+                        Eu sou o Tiago, tenho 37 anos e tambem sou natural de Vila Nova de Famalicão. Sou formado e pós-graduado em artes e design de joalharia. Exerci essa profissão uns anos, até que comecei
+                        a ganhar mais interesse e gosto pela natureza. Esse gosto fez co que eu fosse capaz de produzir a minha propria comida.
+                        O que começou como um hooby, surge em 2020 como a horta d'Ria, um projecto pequeno em tamanho mas grande em qualidade e vontade em estarmos constantemente a aprender. 
+                    </p>
+                    <p>
+                        O Francisco juntou-se à equipa cerca de um ano depois. Os nossos ideais são sempre trabalhar com a natureza e não contra. Temos práticas sustentáveis, agroecologicas e regenerativas. Damos 
+                        ênfase aos produtos locais, sazonais e sistemas circulares. Soberania alimentar na nossa comunidade é o que aspiramos.
+                    </p>
+                    <p>
+                        Em 2023 produzimos mais de 3 toneladas de alimentos e em 2024 produzimos cabazes semanais para as famílias. 
+                    </p>
+                    <p>
+                        Trabalhamos com a restauração e todos os sábados de manhã podes encontrar-nos no mercado municipal de Vila Nova de Famalicão. 
+                    </p>
                 </div>
 
-                <div class="about-us-description">
+                <!-- <div class="about-us-description">
                     <h3>A nossa história</h3>
                     <p> 
                         A Horta d'Ria é um projeto nascido em memória da avó de Tiago, a D.Maria, que todos conhecem por Ria.
@@ -115,9 +132,9 @@
                         com o compromisso de fornecer aos nossos clientes os melhores produtos.
                     </p>
                     <p> Aqui, cada colheita é cuidadosamente cultivada com amor e respeito pela natureza. 
-                        Junte-se a nós numa jornada de sabores autênticos e sustentáveis.
+                        Junta-te a nós numa jornada de sabores autênticos e sustentáveis.
                     </p>
-                </div>
+                </div> -->
                     
                 <div class="about-us-description">
                     <h3>A nossa missão e visão</h3>
