--- a/html/produtos.html
+++ b/html/produtos.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Simão Alves">
-    <meta name="description" content="Produtos 100% Naturais - Horta d´Ria - V. N. Famalicão">
-    <meta name="keywords" content="Agricultura, Terra, Horta, cidade, aldeia, produtos, frescos, fruta, legumes, vegetais, horticolas, ecologia, ecológica, natural, famalicão, famalicao, vnf, agricultor, agricultora">
+    <meta name="description" content="Produtos 100% Naturais - Horta d´Ria - V. N. Famalicão">    
+    <meta name="keywords" content="Agricultura, Terra, Horta, cidade, aldeia, produtos, frescos, fruta, legumes, vegetais, horticolas, ecologia, ecológica, natural, famalicão, famalicao, vnf, agricultor, cabaz, cabazes, produtos 100% naturais">
     <link rel="stylesheet" href="/stylesheet/navAndSearch.css">
     <link rel="stylesheet" href="/stylesheet/styleAboutUs.css">
     <link rel="stylesheet" href="/stylesheet/cabaz.css">
