--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <link rel="stylesheet" href="stylesheet/footer.css">
     <link rel="stylesheet" href="/stylesheet/testemunhos.css">
 
+    <meta name="google-site-verification" content="fG5KQroNX36_63dnQaTQEBEGgJNf0-74G9XbwX3rN8U"
+
 
 
 
