test to apply sitemap.xml

--- a/index.html
+++ b/index.html
@@ -14,13 +14,11 @@
     <link rel="stylesheet" href="stylesheet/contacts.css">
     <link rel="stylesheet" href="stylesheet/footer.css">
     <link rel="stylesheet" href="/stylesheet/testemunhos.css">
-
-    <meta name="google-site-verification" content="fG5KQroNX36_63dnQaTQEBEGgJNf0-74G9XbwX3rN8U"
-
+    <meta name="google-site-verification" content="fG5KQroNX36_63dnQaTQEBEGgJNf0-74G9XbwX3rN8U">
 
 
 
-    <!-- font awesome  -->
+
     <script src="https://kit.fontawesome.com/ff1abd11bd.js" crossorigin="anonymous"></script> 
     <script src="script.js" defer></script>
     <script src="/scriptDocs/testimonials.js" defer></script>
