--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Simão Alves">
-    <meta name="description" content="Produtos 100% Naturais - Horta d´Ria - V. N. Famalicão">
-    <meta name="keywords" content="Agricultura, Terra, Horta, cidade, aldeia, produtos, frescos, fruta, legumes, vegetais, horticolas, ecologia, ecológica, natural, famalicão, famalicao, vnf, agricultor, agricultora">
+
+    <meta name="description" content="Horta d´Ria - Produtos 100% Naturais - Escolhe o teu Cabaz - V. N. Famalicão">
+    <meta name="keywords" content="Agricultura, horta, produtos 100% Naturais, cabaz 1, cabaz 2, cabaz 3, cria o teu cabaz, cabaz, cabazes, horta d'ria, horta da ria">
     <link rel="stylesheet" href="stylesheet/navAndSearch.css">
     <link rel="stylesheet" href="stylesheet/styleAboutUs.css">
     <link rel="stylesheet" href="stylesheet/cabaz.css">
@@ -155,7 +156,7 @@
             <div class="contact social-media">
                 <a href="tel:00351914547465"><i class="fa-solid fa-phone"></i></a>
                 <div class="info-tel">
-                    <span class="call-cost">+351 914 547 465</span>
+                    <span class="call-cost">914 547 465</span>
                     <span class="call-cost">Custo chamada nacional</span>
                 </div>
             </div>
