--- a/html/cabaz-um.html
+++ b/html/cabaz-um.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Simão Alves">
-    <meta name="description" content="Cabaz nº 1 - Horta d´Ria - Produtos 100% Naturais - V. N. Famalicão">
-    <meta name="keywords" content="Agricultura, Terra, Horta, cidade, aldeia, produtos, frescos, fruta, legumes, vegetais, horticolas, ecologia, ecológica, natural, famalicão, famalicao, vnf, agricultor, cabaz, cabazes, produtos 100% naturais">
+    <meta name="description" content="Cabaz nº 1 - Horta d'Ria - Produtos 100% Naturais - V. N. Famalicão">
+    <meta name="keywords" content="Agricultura, horta, produtos 100% Naturais, cabaz 1, cabaz 2, cabaz 3, cria o teu cabaz, cabaz, cabazes, horta d'ria, horta da ria">
     <link rel="stylesheet" href="/stylesheet/styleAboutUs.css">
     <link rel="stylesheet" href="/stylesheet/cabaz.css">
     <link rel="stylesheet" href="/stylesheet/bottomMenu.css">
