Icon title added and test form

--- a/html/form.html
+++ b/html/form.html
@@ -27,7 +27,7 @@
     
 
     <title>Contactos - Horta d'Ria - Produtos 100% Naturais - Agricultura Local e Ecológica - V. N. Famalicão</title>
-
+    <link rel="icon" type="image/png" href="/images/logo.png">
 
 </head>
 <body>
@@ -90,14 +90,10 @@
 
 
     <!-- FORMULARIO DE CONTACTO -->
-    <!-- <form name="Horta_da_Ria" action="/html/success.html" method="POST" data-netlify="true" class="contactForm" > -->
-        <form onsubmit="emailSend(); reset(); return false;" class="contactForm" >
 
-        <!-- <input type="hidden" name="_captcha" value="false"> -->
-        <!-- <input type="hidden" name="_next" value="https://"> -->
-        <input type="hidden" name="subject" value="" id="newMessage" data-remove-prefix>
-        <!-- <input type="hidden" name="_template" value="table"> -->
-        <!-- <input type="hidden" name="_autoresponse" value="" id="autoResponseMessage"> -->
+    <form class="contactForm" name="Horta_da_Ria" action="/html/success.html" method="POST" data-netlify="true"> 
+    <input type="hidden" name="subject" value="" id="newMessage" data-remove-prefix>
+        
 
         <div class="introduction">
             <p class="introductionText">
