--- a/html/produtos.html
+++ b/html/produtos.html
@@ -23,6 +23,8 @@
     
 
     <title>Produtos 100% Naturais - Agricultura Local e Ecológica - V. N. Famalicão</title>
+    <link rel="icon" type="image/png" href="/images/logo.png">
+
 
 
 </head>
