--- a/html/testemunhos.html
+++ b/html/testemunhos.html
@@ -28,6 +28,7 @@
     
 
     <title>Testemunhos - Horta d'Ria - Produtos 100% Naturais - Agricultura Local e Ecológica - V. N. Famalicão</title>
+    <link rel="icon" type="image/png" href="/images/logo.png">
 
 
 </head>
