--- a/html/aboutUs.html
+++ b/html/aboutUs.html
@@ -23,6 +23,7 @@
     
 
     <title>Sobre nós - Horta d'Ria - Produtos 100% Naturais - Agricultura Local e Ecológica - V. N. Famalicão</title>
+    <link rel="icon" type="image/png" href="/images/logo.png">
 
 
 </head>
