--- a/html/raizes.html
+++ b/html/raizes.html
@@ -21,6 +21,8 @@
 
 
     <title>Raízes - Horta d'Ria - Produtos 100% Naturais - Vila Nova de Famalicão</title>
+    <link rel="icon" type="image/png" href="/images/logo.png">
+
 </head>
 <body>
     
