--- a/html/verduras.html
+++ b/html/verduras.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Simão Alves">
-    <meta name="description" content="Verduras | Produtos 100% Naturais - Horta d´Ria - V. N. Famalicão">
-    <meta name="keywords" content="Agricultura, Terra, Horta, cidade, aldeia, produtos, frescos, fruta, legumes, vegetais, horticolas, ecologia, ecológica, natural, famalicão, famalicao, vnf, agricultor, agricultora">
+    <meta name="description" content="Verduras | Produtos 100% Naturais - Horta d'Ria - V. N. Famalicão">
+    <meta name="keywords" content="Agricultura, horta, produtos 100% Naturais, cabaz 1, cabaz 2, cabaz 3, cria o teu cabaz, cabaz, cabazes, horta d'ria, horta da ria, verduras">
     <link rel="stylesheet" href="/stylesheet/styleAboutUs.css">
     <link rel="stylesheet" href="/stylesheet/cabaz.css">
     <link rel="stylesheet" href="/stylesheet/bottomMenu.css">
@@ -21,6 +21,9 @@
 
 
     <title>Verduras - Horta d'Ria - Produtos Biológicos - Vila Nova de Famalicão</title>
+    <link rel="icon" type="image/png" href="/images/logo.png">
+
+
 </head>
 <body>
     
