added an icon and animation to him

--- a/html/success.html
+++ b/html/success.html
@@ -17,6 +17,9 @@
     <link rel="stylesheet" href="/stylesheet/thankYou.css">
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"/> -->
     <script src="https://kit.fontawesome.com/ff1abd11bd.js" crossorigin="anonymous"></script> 
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <script src="/script.js" defer></script>
     <script src="/scriptDocs/form.js" defer></script>
 
@@ -85,12 +88,14 @@
     <section class="thankYou">
 
         <div class="thankYouMessage">
+            <span>Enviado com Sucesso!</span><br>
+            <i class="fa-regular fa-paper-plane animate__animated animate__fadeInBottomLeft"></i><br>
             <span>Obrigado pela tua mensagem!</span>
             <!-- <p>Em breve, entraremos em contacto contigo!</p> -->
         </div>
         
         <div class="follow-us-message">
-            
+
             <p>Segue-nos nas redes socias!</p>
 
             <a href="https://www.facebook.com/Tiago.Horta.da.Ria/" target="_blank">
