changed icon on title tag

--- a/html/aboutUs.html
+++ b/html/aboutUs.html
@@ -23,7 +23,8 @@
     
 
     <title>Sobre nós - Horta d'Ria - Produtos 100% Naturais - Agricultura Local e Ecológica - V. N. Famalicão</title>
-    <link rel="icon" type="image/png" href="/images/logo.png">
+    <link rel="icon" type="image/png" href="/images/HR_logo.png">
+
 
 
 </head>
