--- a/html/success.html
+++ b/html/success.html
@@ -26,7 +26,8 @@
 
 
     <title>Obrigado! - Horta d'Ria - Produtos 100% Naturais - Vila Nova de Famalicão</title>
-    <link rel="icon" type="image/png" href="/images/logo.png">
+    <link rel="icon" type="image/png" href="/images/HR_logo.png">
+
 
 </head>
 <body>
