--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     
 
     <title>Horta d'Ria - Home Page - Produtos 100% Naturais - Agricultura Local e Ecológica - V. N. Famalicão</title>
+    <link rel="icon" type="image/png" href="/images/HR_logo.png">
 
 
 </head>
