--- a/html/carrinho.html
+++ b/html/carrinho.html
@@ -22,7 +22,8 @@
     
 
     <title>Carrinho - Horta d'Ria - Produtos 100% Naturais - Agricultura Local e Ecológica - V. N. Famalicão</title>
-    <link rel="icon" type="image/png" href="/images/logo.png">
+    <link rel="icon" type="image/png" href="/images/HR_logo.png">
+
 
 
 </head>
