--- a/html/leguminosas.html
+++ b/html/leguminosas.html
@@ -21,8 +21,9 @@
 
 
     <title>Leguminosas - Horta d'Ria - Produtos 100% Naturais - Vila Nova de Famalicão</title>
-    <link rel="icon" type="image/png" href="/images/logo.png">
-    
+    <link rel="icon" type="image/png" href="/images/HR_logo.png">
+
+
 </head>
 <body>
     
