--- a/html/plantasEmVaso.html
+++ b/html/plantasEmVaso.html
@@ -21,7 +21,7 @@
 
 
     <title>Plantas em Vaso - Horta d'Ria - Produtos 100% Naturais - Vila Nova de Famalicão</title>
-    <link rel="icon" type="image/png" href="/images/logo.png">
+    <link rel="icon" type="image/png" href="/images/HR_logo.png">
 
 </head>
 <body>
