--- a/html/raizes.html
+++ b/html/raizes.html
@@ -21,7 +21,7 @@
 
 
     <title>Raízes - Horta d'Ria - Produtos 100% Naturais - Vila Nova de Famalicão</title>
-    <link rel="icon" type="image/png" href="/images/logo.png">
+    <link rel="icon" type="image/png" href="/images/HR_logo.png">
 
 </head>
 <body>
