--- a/html/sabaoNatural.html
+++ b/html/sabaoNatural.html
@@ -21,7 +21,9 @@
 
 
     <title>Sabão Natural - Horta d'Ria - Produtos 100% Naturais - Vila Nova de Famalicão</title>
-    <link rel="icon" type="image/png" href="/images/logo.png">
+    <link rel="icon" type="image/png" href="/images/HR_logo.png">
+
+
 
 </head>
 <body>
