--- a/html/saladas.html
+++ b/html/saladas.html
@@ -21,7 +21,8 @@
 
 
     <title>Saladas - Horta d'Ria - Produtos 100% Naturais - Vila Nova de Famalicão</title>
-    <link rel="icon" type="image/png" href="/images/logo.png">
+    <link rel="icon" type="image/png" href="/images/HR_logo.png">
+
 
 </head>
 <body>
