--- a/html/verduras.html
+++ b/html/verduras.html
@@ -21,7 +21,8 @@
 
 
     <title>Verduras - Horta d'Ria - Produtos Biológicos - Vila Nova de Famalicão</title>
-    <link rel="icon" type="image/png" href="/images/logo.png">
+    <link rel="icon" type="image/png" href="/images/HR_logo.png">
+
 
 
 </head>
